--- a/package.json
+++ b/package.json
@@ -162,6 +162,23 @@
     "translations:download": "node ./scripts/translations/download.js",
     "translations:upload": "node ./scripts/translations/upload.js",
     "build": "tsc -p ./tsconfig.release-ckeditor5.json",
+    "build:optimized": "node ./scripts/build-optimized.js production",
+    "build:development": "node ./scripts/build-optimized.js development",
+    "build:lightweight": "node ./scripts/build-optimized.js lightweight",
+    "build:modular": "node ./scripts/build-optimized.js modular",
+    "build:analyze": "node ./scripts/build-optimized.js production --analyze",
+    "build:all": "npm run build:development && npm run build:production && npm run build:lightweight && npm run build:modular",
+    "analyze:bundle": "node ./scripts/analyze-bundle.js",
+    "analyze:all": "npm run build:all && npm run analyze:bundle",
+    "dev": "node ./scripts/dev-server.js",
+    "dev:no-hot": "node ./scripts/dev-server.js --no-hot",
+    "dev:port": "node ./scripts/dev-server.js --port=3000",
+    "test:optimized": "jest --config jest.config.optimized.js",
+    "test:unit": "jest --config jest.config.optimized.js --testNamePattern=unit",
+    "test:integration": "jest --config jest.config.optimized.js --testNamePattern=integration",
+    "test:performance": "jest --config jest.config.optimized.js --testNamePattern=performance",
+    "test:coverage": "jest --config jest.config.optimized.js --coverage",
+    "test:watch": "jest --config jest.config.optimized.js --watch",
     "predll:build": "npm run build",
     "dll:build": "node ./scripts/dll/build-dlls.js --base-dll-config ./scripts/dll/webpack.config.dll.js",
     "changelog": "node ./scripts/release/changelog.js",
